[package]
name = "chat-example"
version = "0.1.0"
edition.workspace = true
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
libp2p = { version = "0.56", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
