[package]
name = "ipfs-private-example"
version = "0.1.0"
edition.workspace = true
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std"] }
either = "1.12"
futures = { workspace = true }
libp2p = { version = "0.56", features = ["tokio", "gossipsub", "dns", "identify", "kad", "macros", "noise", "ping", "pnet", "tcp", "websocket", "yamux"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
